name:                haskell-container-types
version:             0.0.0
synopsis:            Comparing standard Haskell container types
description:         Comparing standard Haskell container types
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2015 Chris Done
category:            Education
build-type:          Simple
cabal-version:       >=1.8

executable haskell-container-types
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
